Repaired z-indexes and links

--- a/style.css
+++ b/style.css
@@ -237,7 +237,6 @@
         font-size: 10px; line-height: 10px;
         font-family: 'Proxima Nova', Helvetica, Arial, Sans-Serif;
         list-style: none;
-        z-index: -1;
     }
     ul#socialmedia li{
         display: inline;
@@ -309,6 +308,7 @@
        #page-about{
           z-index: 50;
           background-color: #000000;
+          position: relative;
        }
        #page-about p{
           width: 1100px;
